:bug: Remove extra margin right of Table placeholder
close #17950

--- a/components/table/style/index.less
+++ b/components/table/style/index.less
@@ -422,9 +422,6 @@
     border-top: @border-width-base @border-style-base @border-color-split;
     border-bottom: @border-width-base @border-style-base @border-color-split;
     border-radius: 0 0 @border-radius-base @border-radius-base;
-    .@{iconfont-css-prefix} {
-      margin-right: 4px;
-    }
   }
 
   &-pagination.@{ant-prefix}-pagination {
